[gd_scene load_steps=3 format=3 uid="uid://b7kl874jux6qp"]

[ext_resource type="Script" path="res://scenes/user_interface/main_menu.gd" id="1_4mq4d"]
[ext_resource type="FontFile" uid="uid://dtuhsft35pcyr" path="res://graphics/Teko-VariableFont_wght.ttf" id="1_wguux"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_4mq4d")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0.0941176, 0.117647, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.548
offset_left = -60.5
offset_top = -40.0
offset_right = 16.7239
offset_bottom = 8.89597
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
modulate = Color(0.130103, 0.565566, 0.672144, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wguux")
theme_override_font_sizes/font_size = 50
text = "START VS PLAYER"

[node name="StartAI" type="Button" parent="VBoxContainer"]
modulate = Color(0.186106, 0.60609, 0.211389, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wguux")
theme_override_font_sizes/font_size = 50
text = "START VS AI   "

[node name="Quit" type="Button" parent="VBoxContainer"]
self_modulate = Color(0.807843, 0.352941, 0.168627, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wguux")
theme_override_font_sizes/font_size = 50
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/StartAI" to="." method="_on_start_ai_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
